syntax = "proto3";
option go_package = "gitlab.com/elixxir/incentives-bot/incentives";

package incentives;

message CMIXText {
uint32 version = 1;
string text = 2;
TextReply reply = 3;
}

message TextReply {
bytes messageId = 1;
bytes senderId = 2;
}

